--- a/.github/workflows/expo-deploy.yml
+++ b/.github/workflows/expo-deploy.yml
@@ -18,21 +18,18 @@ jobs:
         node-version: '20'
         cache: 'npm'
         
-    - name: Setup Expo
+    - name: Setup Expo and EAS
       uses: expo/expo-github-action@v8
       with:
         expo-version: latest
+        eas-version: latest
         token: ${{ secrets.EXPO_TOKEN }}
         
     - name: Install dependencies
       run: npm ci
       
-    - name: Publish to Expo
-      run: npx expo publish --non-interactive
-      env:
-        EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
-        
-    - name: EAS Update
+    - name: Deploy to Expo with EAS Update
       run: npx eas update --branch main --message "Auto-update from GitHub Actions" --non-interactive
       env:
         EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
+        CI: 1
